--- a/index.html
+++ b/index.html
@@ -250,38 +250,38 @@
 
     <div class="boxes">
         <div class="box box1">
-            <img src="img/Newyork.jpeg" alt="">
-            <h3>New york</h3>
+            <img src="img/france.jpeg" alt="">
+            <h3>France</h3>
         </div>
 
         <div class="box box2">
-            <img src="img/Newyork.jpeg" alt="">
-            <h3>New york</h3>
+            <img src="img/Australia.jpeg" alt="">
+            <h3>Australia</h3>
         </div>
 
         <div class="box box3">
-            <img src="img/Newyork.jpeg" alt="">
-            <h3>New york</h3>
+            <img src="img/canada.jpeg" alt="">
+            <h3>Canada</h3>
         </div>
 
         <div class="box box4">
-            <img src="img/Newyork.jpeg" alt="">
-            <h3>New york</h3>
+            <img src="img/italy.jpeg" alt="">
+            <h3>Italy</h3>
         </div>
         
         <div class="box box5">
-            <img src="img/Newyork.jpeg" alt="">
-            <h3>New york</h3>
+            <img src="img/mexcio.jpeg" alt="">
+            <h3>Mexico</h3>
         </div>
 
         <div class="box box6">
-            <img src="img/Newyork.jpeg" alt="">
-            <h3>New york</h3>
+            <img src="img/newZealand.jpeg" alt="">
+            <h3>New Zealand</h3>
         </div>
 
         <div class="box box7">
-            <img src="img/Newyork.jpeg" alt="">
-            <h3>New york</h3>
+            <img src="img/spain.jpeg" alt="">
+            <h3>Spain</h3>
         </div>
 
         <div class="box box8">
